--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "lint-fix": "next lint --fix"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.2.6",
     "@emotion/cache": "11.11.0",
     "@emotion/react": "11.11.1",
     "@emotion/server": "11.11.0",
@@ -24,6 +25,7 @@
     "@mui/material": "5.14.20",
     "@mui/system": "5.14.20",
     "@mui/x-date-pickers": "6.18.4",
+    "antd": "^5.12.5",
     "apexcharts": "3.44.2",
     "date-fns": "2.30.0",
     "formik": "2.4.5",
@@ -33,6 +35,7 @@
     "react": "18.2.0",
     "react-apexcharts": "1.4.1",
     "react-dom": "18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.49.2",
     "simplebar-react": "^3.2.4",
     "yup": "1.3.2"
