--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "antd": "^5.12.5",
     "apexcharts": "3.44.2",
     "date-fns": "2.30.0",
-    "formik": "2.4.5",
+    "formik": "^2.4.5",
     "next": "14.0.4",
     "nprogress": "0.2.0",
     "prop-types": "15.8.1",
