--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@mui/x-date-pickers": "6.18.4",
     "antd": "^5.12.5",
     "apexcharts": "3.44.2",
+    "axios": "^1.6.3",
     "date-fns": "2.30.0",
     "formik": "2.4.5",
     "next": "14.0.4",
@@ -33,6 +34,7 @@
     "prop-types": "15.8.1",
     "react": "18.2.0",
     "react-apexcharts": "1.4.1",
+    "react-big-calendar": "^1.8.5",
     "react-dom": "18.2.0",
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.49.2",
