--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "@emotion/styled": "11.11.0",
     "@heroicons/react": "2.0.18",
     "@hookform/resolvers": "^3.3.2",
+    "@mui/icons-material": "^5.15.2",
     "@mui/lab": "5.0.0-alpha.155",
     "@mui/material": "5.14.20",
+    "@mui/styles": "^5.15.2",
     "@mui/system": "5.14.20",
     "@mui/x-date-pickers": "6.18.4",
     "antd": "^5.12.5",
