--- a/package.json
+++ b/package.json
@@ -6,12 +6,11 @@
   "homepage": "https://devias.io",
   "private": false,
   "scripts": {
-    "dev": "next",
-    "build": "next build",
-    "start": "next start",
-    "export": "next export",
-    "lint": "next lint",
-    "lint-fix": "next lint --fix"
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject",
+    "pretty": "prettier --write \"src/**/*.{js,jsx,ts,tsx}\""
   },
   "dependencies": {
     "@emotion/cache": "11.11.0",
@@ -40,6 +39,7 @@
     "react-dom": "18.2.0",
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.49.2",
+    "react-scripts": "^5.0.1",
     "simplebar-react": "^3.2.4",
     "yup": "1.3.2"
   },
@@ -50,6 +50,7 @@
     "@types/react": "18.2.43",
     "@types/react-dom": "18.2.17",
     "eslint": "8.55.0",
-    "eslint-config-next": "14.0.4"
+    "eslint-config-next": "14.0.4",
+    "prettier": "^3.1.1"
   }
 }
