--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
   "homepage": "https://devias.io",
   "private": false,
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
+    "dev": "next",
+    "build": "next build",
+    "start": "next start",
+    "export": "next export",
+    "lint": "next lint",
+    "lint-fix": "next lint --fix",
     "pretty": "prettier --write \"src/**/*.{js,jsx,ts,tsx}\""
   },
   "dependencies": {
@@ -50,7 +52,6 @@
     "@types/react": "18.2.43",
     "@types/react-dom": "18.2.17",
     "eslint": "8.55.0",
-    "eslint-config-next": "14.0.4",
-    "prettier": "^3.1.1"
+    "eslint-config-next": "14.0.4"
   }
 }
