--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "3.0.0",
   "author": "Devias",
   "licence": "MIT",
-  "homepage": "https://devias.io",
+  "homepage": "https://selvakumarmg.github.io/spfinnacle/",
   "private": false,
   "scripts": {
     "dev": "next",
@@ -27,6 +27,7 @@
     "@mui/styles": "^5.15.2",
     "@mui/system": "5.14.20",
     "@mui/x-date-pickers": "6.18.4",
+    "@reduxjs/toolkit": "^2.0.1",
     "antd": "^5.12.5",
     "apexcharts": "3.44.2",
     "axios": "^1.6.3",
@@ -41,6 +42,7 @@
     "react-dom": "18.2.0",
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.49.2",
+    "react-redux": "^9.0.4",
     "react-scripts": "^5.0.1",
     "simplebar-react": "^3.2.4",
     "yup": "1.3.2"
@@ -52,6 +54,7 @@
     "@types/react": "18.2.43",
     "@types/react-dom": "18.2.17",
     "eslint": "8.55.0",
-    "eslint-config-next": "14.0.4"
+    "eslint-config-next": "14.0.4",
+    "gh-pages": "^6.1.1"
   }
 }
