--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "licence": "MIT",
   "homepage": "https://selvakumarmg.github.io/spfinnacle/",
   "private": false,
+  "type": "module",
   "scripts": {
     "dev": "next",
     "build": "next build",
