--- a/package.json
+++ b/package.json
@@ -4,14 +4,13 @@
   "author": "Devias",
   "licence": "MIT",
   "homepage": "https://selvakumarmg.github.io/spfinnacle/",
-  "private": false,
+  "private": true,
   "scripts": {
     "dev": "next",
     "build": "next build",
     "start": "next start",
     "export": "next export",
-    "lint": "next lint",
-    "lint-fix": "next lint --fix",
+    "lint": "eslint --fix \"src/**/*.{js,jsx,ts,tsx}\"",
     "pretty": "prettier --write \"src/**/*.{js,jsx,ts,tsx}\""
   },
   "dependencies": {
