--- a/package.json
+++ b/package.json
@@ -3,13 +3,12 @@
   "version": "3.0.0",
   "author": "Devias",
   "licence": "MIT",
-  "homepage": "https://selvakumarmg.github.io/spfinnacle/",
+  "homepage": "https://selvakumarmg.github.io/lms-admin/",
   "private": true,
   "scripts": {
     "dev": "next",
     "build": "next build",
     "start": "next start",
-    "export": "next export",
     "lint": "eslint --fix \"src/**/*.{js,jsx,ts,tsx}\"",
     "pretty": "prettier --write \"src/**/*.{js,jsx,ts,tsx}\""
   },
@@ -43,6 +42,8 @@
     "react-hook-form": "^7.49.2",
     "react-redux": "^9.0.4",
     "react-scripts": "^5.0.1",
+    "redux-persist": "^6.0.0",
+    "redux-persist-transform-encrypt": "^5.1.1",
     "simplebar-react": "^3.2.4",
     "yup": "1.3.2"
   },
