--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "@mui/styles": "^5.15.2",
     "@mui/system": "5.14.20",
     "@mui/x-date-pickers": "6.18.4",
-    "@reduxjs/toolkit": "^2.0.1",
+    "@reduxjs/toolkit": "^2.1.0",
     "antd": "^5.12.5",
     "apexcharts": "3.44.2",
     "axios": "^1.6.3",
@@ -40,10 +40,11 @@
     "react-dom": "18.2.0",
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.49.2",
-    "react-redux": "^9.0.4",
+    "react-redux": "^9.1.0",
     "react-scripts": "^5.0.1",
     "redux-persist": "^6.0.0",
     "redux-persist-transform-encrypt": "^5.1.1",
+    "redux-saga": "^1.3.0",
     "simplebar-react": "^3.2.4",
     "yup": "1.3.2"
   },
